Added some more comments

--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -2599,6 +2599,7 @@
     "for station, count in active_stations:\n",
     "    print(f\"Station: {station}, Row Count: {count}\")\n",
     "\n",
+    "# Print the most active station\n",
     "most_active_id = None\n",
     "if active_stations:\n",
     "    most_active_station = active_stations[0] \n",
@@ -2666,6 +2667,7 @@
     "\n",
     "temperatures = [temp[0] for temp in last_12_months_temp]\n",
     "\n",
+    "# Create histogram\n",
     "plt.figure(figsize=(10, 8))\n",
     "plt.hist(temperatures, bins=12, alpha=0.7, color='skyblue', label='tobs')\n",
     "plt.title(f'Temperature Observations for Station {most_active_id}\\n(Last 12 Months)')\n",
